# reji-studio

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  README.md  TASK_v052_gl_interop.md  build.zig  build_env.bat  build_log.txt  debug_output.txt  fix_pipeline.ps1  fix_pipeline2.ps1  justfile  pipeline.cpp  repo_snapshot.txt  selectRenderPath(pipeline_.display_vendor_id())  test_output.txt
.claude/: settings.json  settings.local.json
.claude/hooks/: hooks.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  quality.yml
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  reji_studio.slnx
build_debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_debug/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  (+9 more)
docs/: AGENTS.md  CONTEXT.md  FABLE5_BUG_PLAN.md  FABLE5_BUG_PLAN_V10.md  FABLE5_BUG_PLAN_V2.md  FABLE5_BUG_PLAN_V3.md  FABLE5_BUG_PLAN_V4.md  FABLE5_BUG_PLAN_V5.md  FABLE5_BUG_PLAN_V6.md  FABLE5_BUG_PLAN_V7.md  FABLE5_BUG_PLAN_V8.md  FABLE5_BUG_PLAN_V9.md  FFI_CONTRACT.md  HEALING_LOG_SCHEMA.md  ROADMAP.md  SESSION_NOTES.md  TALIMAT_EXISTINGDESKTOPSOURCE_WIRING.md  TALIMAT_HOTRELOAD_REGRESYON.md  V10_SENTEZ_TRIYAJ.md  V10_TARAMA_PROMPT.md  V10_TARAMA_SCOPE.txt  V8_I11_I19_I20_TALIMAT.md  V8_I6_I7_I12_I13_TALIMAT.md  VULKAN_DEV_GUIDE.md  memory.md  optimization_security.md  progress.md  vulkan-sync-diagram.md
scripts/: README_benchmark.md  benchmark_compare.py  build.bat  build.py  build_target.bat  check-abi.ps1  configure.bat  fable5-review.ps1  patch_main_window.py  patch_render_capability.py  profile_performance.py  test_obs_client.py  test_obs_json.py  test_obs_parallel.py  test_obs_websocket_js.js
src/ffi/: CMakeLists.txt  ffi_bridge.c  ffi_bridge.h  ffi_bridge.zig  sizeof_check.cpp  sizeof_check.zig
src/orchestrator/: Cargo.toml  build.rs  cbindgen.toml  lib.rs  metrics.rs  rule_engine.rs
src/orchestrator/src/: calibration.rs  constants.rs  control.html  event_bus.rs  ffi.rs  healing.rs  healing_log.rs  lib.rs  metrics.rs  obs_protocol.rs  paths.rs  rules.rs  sys_stats.rs  ws_server.rs
src/orchestrator/tests/: rules_test.rs  ws_obs_protocol_test.rs
src/pipeline/: CMakeLists.txt  audio_subsystem.cpp  capture_subsystem.cpp  command_router.cpp  copy_optimizer.cpp  copy_optimizer.h  encode_subsystem.cpp  existing_desktop_source.cpp  frame_pacer.cpp  frame_pacing.cpp  frame_pacing.h  frame_profiler.cpp  gpu_interop_subsystem.cpp  gpu_query_timing.cpp  gpu_query_timing.h  i_transport.cpp  metrics_collector.cpp  metrics_subsystem.cpp  output_subsystem.cpp  pipeline.cpp  pipeline.cpp.tmp  pipeline.cpp.tmp2  recovery_coordinator.cpp  screen_capture_factory.cpp  seh_filter.cpp
src/pipeline/audio/: aac_config.h  aac_encoder.cpp  aac_encoder.h  asc_state.h  audio_device_enum.cpp  audio_device_enum.h  audio_encode_bridge.cpp  audio_encode_bridge.h  audio_ring.h  av_sync.h  flv_audio_tag.h  pcm_convert.h  wasapi_capture.cpp  wasapi_capture.h
src/pipeline/capture/: capture_dxgi.cpp  capture_dxgi.cpp.tmp  capture_dxgi.h  capture_dxgi_screen.h  capture_wgc.cpp  capture_wgc.h  gpu_resource_manager.cpp  gpu_resource_manager.h  pitch_copy.h
src/pipeline/encode/: encode_nvenc.cpp  encode_nvenc.h
src/pipeline/gpu/: external_memory_bridge.cpp  external_memory_bridge.h  external_memory_bridge.zig  slot_ring.h  vulkan_initializer.cpp  vulkan_initializer.h  vulkan_initializer.zig  zig_win32_compat.asm  zig_win32_compat.c
src/pipeline/include/: audio_subsystem.h  bitrate_policy.h  capture_subsystem.h  command_router.h  desktop_source_logic.h  encode_subsystem.h  existing_desktop_source.h  frame_drop_policy.h  frame_pacer.h  frame_profiler.h  gpu_interop_subsystem.h  i_screen_capture.h  i_source.h  i_transport.h  i_video_encoder.h  metrics_collector.h  metrics_subsystem.h  output_subsystem.h  pipeline.h  recovery_coordinator.h  reji_constants.h  seh_filter.h
src/pipeline/output/: rtmp_transport.cpp  rtmp_transport.h  srt_output.cpp  srt_output.h  srt_output_stub.cpp  srt_transport.cpp  srt_transport.h
src/pipeline/rtmp/: happy_eyeballs.zig  rtmp_transport.zig
src/pipeline/rtmp/compat/util/: platform.h
src/pipeline/shaders/: copy_convert.comp
src/ui/: CMakeLists.txt  healing_overlay.cpp  healing_overlay.h  main.cpp  main_window.cpp  main_window.cpp.tmp3  main_window.h  preview_widget.cpp  preview_widget.h  profile_advisor.cpp  profile_advisor.h  program_widget.cpp  program_widget.h  qrhi_window_wrapper.cpp  qrhi_window_wrapper.h  render_capability.cpp  render_capability.h  resource_init.cpp  resource_init.h  rules_template.qrc  rules_watch.h  rust_bridge.cpp  rust_bridge.h  settings_dialog.cpp  settings_dialog.h  shader_cache.cpp  shader_cache.h  vulkan_render_path.cpp  vulkan_render_path.h
tests/: CMakeLists.txt  README.md  baseline_metrics.txt  pipeline_characterization_test.cpp  pipeline_integration_test.cpp  test_aac_config.cpp  test_aac_encoder.cpp  test_audio_device_enum.cpp  test_audio_ring.cpp  test_audio_wire.cpp  test_av_sync.cpp  test_bitrate_policy.cpp  test_desktop_source_logic.cpp  test_existing_desktop_source.cpp  test_ffi_boundary.cpp  test_frame_drop_policy.cpp  test_frame_pacing.cpp  test_frame_profiler.cpp  test_gpu_copy_optimizer.cpp  test_gpu_query_timing.cpp  test_gpu_resource_pitch.cpp  test_healing_overlay.cpp  test_keyed_mutex_timeout.cpp  test_output_subsystem.cpp  test_profile_advisor.cpp  test_qrc_resources.cpp  test_rules_watch.cpp  test_seh_filter.cpp  test_shader_cache.cpp  test_slot_ring.cpp
tools/: dxgi_test.cpp
(+207 files in other folders)
