[package]
name             = "reji-orchestrator"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tokio       = { workspace = true }
crossbeam   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rmp-serde   = { workspace = true }
toml        = { workspace = true }
axum        = { workspace = true, features = ["ws"] }
tracing     = { workspace = true }
sha2        = { workspace = true }  # V8/I8 WS auth
base64      = { workspace = true }
getrandom   = { workspace = true }
subtle      = { workspace = true }
rusqlite    = { workspace = true }  # Özellik#3 healing-log (bundled SQLite)

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite  = "0.24"
futures-util       = "0.3"
sha2               = { workspace = true }  # V8/I8: entegrasyon testinde client-side auth hesabı
base64             = { workspace = true }

[build-dependencies]
cbindgen = "0.27"